templates/istio/customer-ui-istio-network-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: customer-ui-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP
    hosts:             # istio ingress host. This is the route defined in paygate-istio-system
    - "customer-ui-paygate-istio-system.apps.cluster-spore-a724.spore-a724.sandbox596.opentlc.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-ui
spec:
  hosts:       # istio ingress host. This is the route defined in paygate-istio-system
  - "customer-ui-paygate-istio-system.apps.cluster-spore-a724.spore-a724.sandbox596.opentlc.com"
  gateways:
  - customer-ui-gateway
  http:
    - route:
      - destination:
          host: customer-ui
          subset: v1
        weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customer-ui
spec:
  host: customer-ui
  subsets:
  - name: v1
    labels:
      version: v1
