templates/istio/istio-apps-routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: customer-ui
spec:
  host: customer-ui-paygate-istio-system.apps.cluster-spore-a724.spore-a724.sandbox596.opentlc.com
  port:
    targetPort: http2
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
